force-app/main/default/objects/Opportunity/fields/CIBE_RAROperacionRar__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RAROperacionRar__c</fullName>
    <description>rar de la operación. Integración RAR.</description>
    <label>RAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>