force-app/main/default/objects/Opportunity/fields/CIBE_RARPD__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARPD__c</fullName>
    <description>Valor bancario PD (Probabilidad de incumplimiento). Integración RAR.</description>
    <label>PD</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>