force-app/main/default/objects/Opportunity/fields/CIBE_RARPlazoFecha__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARPlazoFecha__c</fullName>
    <description>Fecha de vencimiento de la operación. Integración RAR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Plazo y vida media(fecha)</label>
    <type>Date</type>
</CustomField>