force-app/main/default/objects/Opportunity/fields/CIBE_RARPlazoMeses__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARPlazoMeses__c</fullName>
    <description>Período total del plazo. Integración RAR.</description>
    <label>Plazo y vida media(meses)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>