force-app/main/default/objects/Opportunity/fields/CIBE_RARPost__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARPost__c</fullName>
    <description>Publicación grupal Rar. Campo calculado con simulación \ datos de rentabilidad. Integración RAR.</description>
    <label>RAR Post Grupo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>