force-app/main/default/objects/Opportunity/fields/CIBE_RARSeveridad__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARSeveridad__c</fullName>
    <description>Valor bancario LGD (pérdida en caso de incumplimiento). Integración RAR.</description>
    <label>Severidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>