force-app/main/default/objects/Opportunity/fields/CIBE_RARTipoOperacion__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RARTipoOperacion__c</fullName>
    <description>Nombre de la operación de la simulación. Integración RAR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo Operación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>