force-app/main/default/objects/Opportunity/fields/CIBE_RenewModificationAmount__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RenewModificationAmount__c</fullName>
    <label>Renovation or modification amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>