force-app/main/default/objects/Opportunity/fields/CIBE_RenewModificationAmountEUR__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RenewModificationAmountEUR__c</fullName>
    <label>Renovation or modification amount €</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>