force-app/main/default/objects/Opportunity/fields/CIBE_Sector__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Energy</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Construction, Infra. &amp; Real State</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>TMT &amp; Services</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Industrial &amp; Consumer Goods</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Food, Health and Beverage</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>FIG &amp; IFI</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Caixabank Subsidiaries</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Potenciales</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Sponsors</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>