force-app/main/default/objects/Opportunity/fields/CIBE_Subproducto__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Subproducto__c</fullName>
    <inlineHelpText>Aplies only to MMPP</inlineHelpText>
    <label>Subproducto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electricidad</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Metales</fullName>
            </value>
            <value>
                <fullName>Petróleo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>