force-app/main/default/objects/Opportunity/fields/CIBE_SyndicationTeamEmployee__c.field-meta.xml
<CustomField>
    <fullName>CIBE_SyndicationTeamEmployee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syndication team employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Syndication team employee)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>