force-app/main/default/objects/Opportunity/fields/CIBE_SyndicationTeamOpinion__c.field-meta.xml
<CustomField>
    <fullName>CIBE_SyndicationTeamOpinion__c</fullName>
    <description>Campo del componente de listado de la Oportunidad CIB</description>
    <label>Opinión Sindicaciones Comité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>