force-app/main/default/objects/Opportunity/fields/CIBE_TeamEmployee__c.field-meta.xml
<CustomField>
    <fullName>CIBE_TeamEmployee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Team Employee)</relationshipLabel>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>