force-app/main/default/objects/Opportunity/fields/CIBE_TipoCambio__c.field-meta.xml
<CustomField>
    <fullName>CIBE_TipoCambio__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(CIBE_TipoCambioDivisa__c)), NOT(ISBLANK(TEXT(CIBE_Divisa__c)))),&quot;1 EUR = &quot; &amp; TEXT(CIBE_Divisa__c) &amp; &quot; &quot; &amp; CIBE_TipoCambioDivisa__c, &quot;&quot;)</formula>
    <label>Tipo de cambio</label>
    <type>Text</type>
</CustomField>