force-app/main/default/objects/Opportunity/fields/CIBE_TipoCambioDivisa__c.field-meta.xml
<CustomField>
    <fullName>CIBE_TipoCambioDivisa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de cambio (1 EUR =)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>