force-app/main/default/objects/Opportunity/fields/CIBE_TipoOperacion__c.field-meta.xml
<CustomField>
    <fullName>CIBE_TipoOperacion__c</fullName>
    <label>Tipo de Operacion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nueva</fullName>
                <default>true</default>
                <label>Nueva</label>
            </value>
            <value>
                <fullName>Disposición</fullName>
            </value>
            <value>
                <fullName>Ampliación importe</fullName>
            </value>
            <value>
                <fullName>Renovación</fullName>
            </value>
            <value>
                <fullName>Modificación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>