force-app/main/default/objects/Opportunity/fields/CIBE_VAOperacion__c.field-meta.xml
<CustomField>
    <fullName>CIBE_VAOperacion__c</fullName>
    <description>Valor añadido de la operación. Integración RAR.</description>
    <label>VA Operación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>