force-app/main/default/objects/Opportunity/fields/CIBE_VigenciaOferta__c.field-meta.xml
<CustomField>
    <fullName>CIBE_VigenciaOferta__c</fullName>
    <description>Campo del componente de listado de la Oportunidad CIB</description>
    <label>Vigencia Oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90 días</fullName>
            </value>
            <value>
                <fullName>Superior a 90 días</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>