force-app/main/default/objects/Opportunity/fields/CIBE_Visto__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Visto__c</fullName>
    <description>Campo del componente de listado de la Oportunidad CIB</description>
    <label>Visto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EG</fullName>
            </value>
            <value>
                <fullName>IG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>