force-app/main/default/objects/Opportunity/fields/CSBD_Alta_omnichannel__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Alta_omnichannel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alta omnichannel</label>
    <type>Checkbox</type>
</CustomField>