force-app/main/default/objects/Opportunity/fields/CSBD_Anonimizada__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Anonimizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para determinar si una oportunidad ha sido anonimizada o no</description>
    <label>Anonimizada</label>
    <type>Checkbox</type>
</CustomField>