force-app/main/default/objects/Opportunity/fields/CSBD_Aportacion_inicial_sim__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Aportacion_inicial_sim__c</fullName>
    <label>Aportación inicial sim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>