force-app/main/default/objects/Opportunity/fields/CSBD_AportacionInicial__c.field-meta.xml
<CustomField>
    <fullName>CSBD_AportacionInicial__c</fullName>
    <label>Aportación inicial cliente</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>