force-app/main/default/objects/Opportunity/fields/CSBD_Asignacion_Auto_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Asignacion_Auto_Pendiente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si tenemos una cita con un cliente pendiente que iWD tendrá que indicarnos a que agente quiere asignarla.</description>
    <label>Asignacion auto pendiente</label>
    <type>Checkbox</type>
</CustomField>