force-app/main/default/objects/Opportunity/fields/CSBD_CalleVivienda__c.field-meta.xml
<CustomField>
    <fullName>CSBD_CalleVivienda__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vía</label>
    <length>60</length>
    <type>Text</type>
</CustomField>