force-app/main/default/objects/Opportunity/fields/CSBD_CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CSBD_CampaignId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>