force-app/main/default/objects/Opportunity/fields/CSBD_Canal__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Canal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Canal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>