force-app/main/default/objects/Opportunity/fields/CSBD_CasoOrigen__c.field-meta.xml
<CustomField>
    <fullName>CSBD_CasoOrigen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso origen</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CC_Cliente</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Oportunidades CSBD</relationshipLabel>
    <relationshipName>Oportunidades_del</relationshipName>
    <type>Lookup</type>
</CustomField>