force-app/main/default/objects/Opportunity/fields/CSBD_Categoria__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Categoria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Categoría</label>
    <length>255</length>
    <type>Text</type>
</CustomField>