force-app/main/default/objects/Opportunity/fields/CSBD_CategoriaProducto__c.field-meta.xml
<CustomField>
    <fullName>CSBD_CategoriaProducto__c</fullName>
    <description>Categoría producto</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Categoría producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>