force-app/main/default/objects/Opportunity/fields/CSBD_Centro_del_propietario__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Centro_del_propietario__c</fullName>
    <formula>Owner.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centro del propietario de la oportunidad</label>
    <type>Text</type>
</CustomField>