force-app/main/default/objects/Opportunity/fields/CSBD_Clave_Producto__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Clave_Producto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clave producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>