force-app/main/default/objects/Opportunity/fields/CSBD_Cliente_Chat_Interaccion__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Cliente_Chat_Interaccion__c</fullName>
    <description>Indica si el cliente tuvo alguna interacción después de recibir el mensaje automático.</description>
    <formula>IF(
    RecordType.DeveloperName = &apos;CSBD_Chat&apos;,
    IF(
        NOT(ISNULL(CSBD_Respuesta_Mensaje_Automatico__c)),
        IF(
            ISNULL(CSBD_PrimerContactoSLA__c),
            &apos;Cliente NO responde&apos;,
            &apos;Cliente responde&apos;
        ),
        &apos;&apos;
    ),
    &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indica si el cliente tuvo alguna interacción después de recibir el mensaje automático.</inlineHelpText>
    <label>Cliente chat interacción</label>
    <type>Text</type>
</CustomField>