force-app/main/default/objects/Opportunity/fields/CSBD_Cliente_Internacional__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Cliente_Internacional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que si está marcado nos indica que el tipo de cliente es internacional.</description>
    <label>Cliente internacional</label>
    <type>Checkbox</type>
</CustomField>