force-app/main/default/objects/Opportunity/fields/CSBD_Codigo_Estado_Tracking__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Codigo_Estado_Tracking__c</fullName>
    <label>Código Estado Tracking</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>