force-app/main/default/objects/Opportunity/fields/CSBD_CodigoPostal__c.field-meta.xml
<CustomField>
    <fullName>CSBD_CodigoPostal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>