force-app/main/default/objects/Opportunity/fields/CSBD_Comentarios_cliente__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Comentarios_cliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comentarios cliente</label>
    <type>TextArea</type>
</CustomField>