force-app/main/default/objects/Opportunity/fields/CSBD_Comunidad_Autonoma_2__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Comunidad_Autonoma_2__c</fullName>
    <description>Comunidad autónoma</description>
    <label>Comunidad autónoma</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ES-CT</fullName>
            </value>
            <value>
                <fullName>Andalucía</fullName>
            </value>
            <value>
                <fullName>Aragón</fullName>
            </value>
            <value>
                <fullName>Asturias</fullName>
            </value>
            <value>
                <fullName>Baleares</fullName>
            </value>
            <value>
                <fullName>Canarias</fullName>
            </value>
            <value>
                <fullName>Cantabria</fullName>
            </value>
            <value>
                <fullName>Castilla y León</fullName>
            </value>
            <value>
                <fullName>Castilla-La Mancha</fullName>
            </value>
            <value>
                <fullName>Cataluña</fullName>
            </value>
            <value>
                <fullName>Ceuta</fullName>
            </value>
            <value>
                <fullName>Comunidad Valenciana</fullName>
            </value>
            <value>
                <fullName>Extremadura</fullName>
            </value>
            <value>
                <fullName>Galicia</fullName>
            </value>
            <value>
                <fullName>La Rioja</fullName>
            </value>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>Melilla</fullName>
            </value>
            <value>
                <fullName>Navarra</fullName>
            </value>
            <value>
                <fullName>País Vasco</fullName>
            </value>
            <value>
                <fullName>Región de Murcia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>