force-app/main/default/objects/Opportunity/fields/CSBD_ComunidadAutonoma__c.field-meta.xml
<CustomField>
    <fullName>CSBD_ComunidadAutonoma__c</fullName>
    <description>Comunidad autónoma</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comunidad autónoma (código)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>