force-app/main/default/objects/Opportunity/fields/CSBD_Con_Duplicados__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Con_Duplicados__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Se han rechazado automáticamente oportunidades anteriores que se han considerado duplicadas de ésta</inlineHelpText>
    <label>Con duplicados</label>
    <type>Checkbox</type>
</CustomField>