force-app/main/default/objects/Opportunity/fields/CSBD_CondicionesPromos__c.field-meta.xml
<CustomField>
    <fullName>CSBD_CondicionesPromos__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condiciones y Promos</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>