force-app/main/default/objects/Opportunity/fields/CSBD_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segundo contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Segundo contacto)</relationshipLabel>
    <relationshipName>Opportunity2</relationshipName>
    <type>Lookup</type>
</CustomField>