force-app/main/default/objects/Opportunity/fields/CSBD_Contact_Escala_Maestra__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Contact_Escala_Maestra__c</fullName>
    <formula>CSBD_Contact__r.CSBD_Escala_Maestra__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escala maestra del contacto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>