force-app/main/default/objects/Opportunity/fields/CSBD_Contact_Heavy_Digital__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Contact_Heavy_Digital__c</fullName>
    <formula>CSBD_Contact__r.CSBD_Cliente_HD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Los cotntactos Heavy Digital son aquellos que hacen un uso intensivo de los canáles electrónicos.</inlineHelpText>
    <label>Contacto Heavy Digital</label>
    <type>Checkbox</type>
</CustomField>