force-app/main/default/objects/Opportunity/fields/CSBD_ContactoTitular2__c.field-meta.xml
<CustomField>
    <fullName>CSBD_ContactoTitular2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titular 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CSBD_TitularHipoteca</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Titular 2)</relationshipLabel>
    <relationshipName>OportunidadesTitular2</relationshipName>
    <type>Lookup</type>
</CustomField>