force-app/main/default/objects/Opportunity/fields/CSBD_Created_date_time__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Created_date_time__c</fullName>
    <formula>DATETIMEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha/hora creación</label>
    <type>DateTime</type>
</CustomField>