force-app/main/default/objects/Opportunity/fields/CSBD_Cuota_mensual_porcentaje__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Cuota_mensual_porcentaje__c</fullName>
    <label>Cuota mensual por % sim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>