force-app/main/default/objects/Opportunity/fields/CSBD_CuotaMensualHipoteca__c.field-meta.xml
<CustomField>
    <fullName>CSBD_CuotaMensualHipoteca__c</fullName>
    <label>Cuota mensual hipoteca</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>