force-app/main/default/objects/Opportunity/fields/CSBD_Datos_Calculo_DTI__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Datos_Calculo_DTI__c</fullName>
    <description>Interno, guarda el JSON con la información que usa el LWC csbd_calculadora_dti</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Datos cálculo DTI (interno)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>