force-app/main/default/objects/Opportunity/fields/CSBD_Dejar_Pendiente_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Dejar_Pendiente_Cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo se marca al generar un borrador de correo a través de la operativa &quot;Enviar correo&quot; según el valor indicado por el usuario en el modal de dicha operativa. Posteriormente al enviar el correo, si el campo está marcado, la oportunidad quedará en estado &quot;Pendiente Cliente&quot;</description>
    <label>Dejar &quot;Pendiente Cliente&quot;</label>
    <type>Checkbox</type>
</CustomField>