force-app/main/default/objects/Opportunity/fields/CSBD_DeliveryInternalName__c.field-meta.xml
<CustomField>
    <fullName>CSBD_DeliveryInternalName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Internal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>