force-app/main/default/objects/Opportunity/fields/CSBD_Detalle_producto__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Detalle_producto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detalle producto</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>