force-app/main/default/objects/Opportunity/fields/CSBD_Dif_Importe_Preconcedido__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Dif_Importe_Preconcedido__c</fullName>
    <formula>IF(NOT(ISBLANK(CSBD_Contact__c)), CSBD_Contact__r.CSBD_Limite_Prestamos_Oficinas__c - Amount, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Se obtiene restando el importe del producto principal de la oportunidad, del importe preconcedido para préstamos (en oficinas) que tenía el contacto en el momento de la creación de la oportunidad.</inlineHelpText>
    <label>Diferencial importe preconcedido-interno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>