force-app/main/default/objects/Opportunity/fields/CSBD_Dif_Importe_Preconcedido_Imagen__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Dif_Importe_Preconcedido_Imagen__c</fullName>
    <formula>IF(BLANKVALUE(CSBD_Contact__r.CSBD_Limite_Prestamos_Oficinas__c, 0) = 0,
   IMAGE(&quot;/resource/CC_Gray&quot;, &apos;Sin importe disponible&apos;, 15, 15),
   IF(CSBD_Contact__r.CSBD_Limite_Prestamos_Oficinas__c - Amount &lt; 0,
      IMAGE(&quot;/resource/CC_Red&quot;, &apos;Negativo&apos;, 15, 15),
      IMAGE(&quot;/resource/CC_Green&quot;, &apos;Positivo&apos;, 15, 15)
   )
)</formula>
    <inlineHelpText>Representa el diferencial entre &quot;Importe disponible préstamos oficinas&quot; del contacto y el importe del producto principal de la oportunidad (Verde: Positivo, Rojo: Negativo, Gris: Importe disponible desconocido)</inlineHelpText>
    <label>Diferencial importe disponible OP</label>
    <type>Text</type>
</CustomField>