force-app/main/default/objects/Opportunity/fields/CSBD_Dif_Importe_Preconcedido_Label__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Dif_Importe_Preconcedido_Label__c</fullName>
    <formula>IF(
  BLANKVALUE(CSBD_Contact__r.CSBD_Limite_Prestamos_Oficinas__c, 0) = 0,
  &apos;Sin límite&apos;,
  IF(
    CSBD_Contact__r.CSBD_Limite_Prestamos_Oficinas__c - Amount &lt; 0,
    &apos;Negativo&apos;,
    &apos;Positivo&apos;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencial importe preconcedido-resumen</label>
    <type>Text</type>
</CustomField>