force-app/main/default/objects/Opportunity/fields/CSBD_Diferencial_Limite__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Diferencial_Limite__c</fullName>
    <formula>IF(BLANKVALUE(CSBD_Limite_Prestamos_Oficinas__c, 0) = 0,
   IMAGE(&apos;/resource/CSBD_Diferencial_Limite_Sin_Limite&apos;, &apos;Sin límite&apos;),
   IF(CSBD_Limite_Prestamos_Oficinas__c - Amount &lt; 0,
      IMAGE(&apos;/resource/CSBD_Diferencial_Limite_Negativo&apos;, &apos;Negativo&apos;),
      IMAGE(&apos;/resource/CSBD_Diferencial_Limite_Positivo&apos;, &apos;Positivo&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencial inicial límite</label>
    <type>Text</type>
</CustomField>