force-app/main/default/objects/Opportunity/fields/CSBD_Dispone_Importe_Preconcedido__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Dispone_Importe_Preconcedido__c</fullName>
    <formula>BLANKVALUE(CSBD_Contact__r.CSBD_Limite_Prestamos_Oficinas__c, 0) != 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispone de importe preconcedido</label>
    <type>Checkbox</type>
</CustomField>