force-app/main/default/objects/Opportunity/fields/CSBD_Dispositivo__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Dispositivo__c</fullName>
    <description>Campo utilizado para guardar el valor que viene en el campo &quot;entorn&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dispositivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>