force-app/main/default/objects/Opportunity/fields/CSBD_Email_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Email_Solicitud__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email solicitud</label>
    <type>Email</type>
</CustomField>