force-app/main/default/objects/Opportunity/fields/CSBD_Empresa_Proveedora__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Empresa_Proveedora__c</fullName>
    <label>Empresa proveedora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CaixaBank</fullName>
                <default>true</default>
                <label>CaixaBank</label>
            </value>
            <value>
                <fullName>imaginBank</fullName>
            </value>
            <value>
                <fullName>inTouch</fullName>
            </value>
            <value>
                <fullName>Now In Empleado</fullName>
            </value>
            <value>
                <fullName>Now In Soporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>