force-app/main/default/objects/Opportunity/fields/CSBD_Empresa_Proveedora_Logo__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Empresa_Proveedora_Logo__c</fullName>
    <formula>IF(ISPICKVAL(CSBD_Empresa_Proveedora__c, &apos;imaginBank&apos;),
IMAGE(&apos;/resource/imaginBank_Logo2&apos;, &apos;imaginBank&apos;),
IF(ISPICKVAL(CSBD_Empresa_Proveedora__c,&apos;CaixaBank&apos;),
IMAGE(&apos;/resource/Caixabankbis_Logo&apos;,&apos;Caixabank&apos;),
IF(ISPICKVAL(CSBD_Empresa_Proveedora__c,&apos;Now In Soporte&apos;),&apos;Now In Soporte&apos;,
IF(ISPICKVAL(CSBD_Empresa_Proveedora__c,&apos;Now In Empleado&apos;),&apos;Now In Empleado&apos;,
IMAGE(&apos;/resource/InTouch_2_Logo&apos;,&apos;InTouch&apos;)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Empresa proveedora</label>
    <type>Text</type>
</CustomField>