force-app/main/default/objects/Opportunity/fields/CSBD_Equipo__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Equipo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Centro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>