force-app/main/default/objects/Opportunity/fields/CSBD_EscaleraVivienda__c.field-meta.xml
<CustomField>
    <fullName>CSBD_EscaleraVivienda__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bloque, Edificio, Escalera</label>
    <length>15</length>
    <type>Text</type>
</CustomField>