force-app/main/default/objects/Opportunity/fields/CSBD_Estado__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nueva</fullName>
            </value>
            <value>
                <fullName>Activa</fullName>
                <default>true</default>
                <label>Activa</label>
            </value>
            <value>
                <fullName>Pendiente Interno</fullName>
            </value>
            <value>
                <fullName>Pendiente Cita</fullName>
            </value>
            <value>
                <fullName>Cerrada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
            <value>
                <fullName>Pendiente Cliente</fullName>
            </value>
            <value>
                <fullName>Con Venta</fullName>
                <isActive>false</isActive>
                <label>Con Venta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>