force-app/main/default/objects/Opportunity/fields/CSBD_Estado_Tracking__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Estado_Tracking__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estado tracking</label>
    <length>100</length>
    <type>Text</type>
</CustomField>